# JoeGCServices

./: .env.example  .env.nuc.example  .gitignore  AGENTS.md  CONFIG_CONSOLIDATION_NEXT_STEPS.md  Cargo.toml  DEVELOPMENT.md  DOCS.md  Dockerfile.builder  ENV_CONFIG_PLAN.md  ENV_README.md  FEATURES.md  GFS_INGESTION_PLAN.md  GOES_SCENARIOS_READY.md  GRIB2_FIX_PLAN.md  GRIB2_PNG_DECOMPRESSION_FIX.md  HRRR_IMPLEMENTATION_SUMMARY.md  HRRR_SCENARIOS_READY.md  INGESTION.md  INGESTION_CONSOLIDATION_PLAN.md  LOAD_TEST_HAMMERING_PLAN.md  MONITORING.md  NETCDF_OPTIMIZATION_BASELINE.md  NETCDF_OPTIMIZATION_STATUS.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PROFILING_IMPLEMENTATION.md  QUICKREF.md  RENDERER_PROFILING_PLAN.md  RENDERING_PIPELINE_ANALYSIS.md  SESSION_SUMMARY.md  STARTUP_WORKFLOW.md  TEMPORAL_TESTING_PLAN.md  TODO.md  VALIDATION_PLAN.md  WGRIB2_USAGE.md  docker-compose.yml  grafana-enhanced-dashboard.json  grafana-wms-dashboard.json  update-grafana-dashboard.sh
crates/edr-protocol/: Cargo.toml
crates/edr-protocol/benches/: edr_benchmarks.rs
crates/edr-protocol/src/: collections.rs  coverage_json.rs  errors.rs  geojson.rs  lib.rs  locations.rs  parameters.rs  queries.rs  responses.rs  types.rs
crates/grib2-parser/: Cargo.toml
crates/grib2-parser/examples/: check_sections.rs  debug_grib2.rs  debug_grid.rs  inspect_grib2.rs  list_messages.rs  test_grib_crate.rs  test_rendering.rs  test_unpacking.rs
crates/grib2-parser/src/: lib.rs  tables.rs
crates/grib2-parser/src/sections/: mod.rs
crates/grib2-parser/src/templates/: mod.rs
crates/grib2-parser/src/unpacking/: mod.rs
crates/grib2-parser/testdata/: .gitignore
crates/grib2-parser/tests/: mrms_bounds.rs  mrms_data_check.rs  mrms_sample_point.rs  parse_gfs.rs  parse_mrms.rs  run_tests.sh  sections_unit_tests.rs  setup_test_data.sh  test_sections.rs  testdata_generator.rs  validate_grib2.rs
crates/grib2-parser/tests/common/: mod.rs
crates/grid-processor/: Cargo.toml  README.md
crates/grid-processor/src/: config.rs  downsample.rs  error.rs  factory.rs  lib.rs  minio_storage.rs  query.rs  service.rs  testdata.rs  types.rs
crates/grid-processor/src/cache/: chunk_cache.rs  mod.rs
crates/grid-processor/src/processor/: mod.rs  zarr.rs
crates/grid-processor/src/projection/: interpolation.rs  mod.rs  reproject.rs
crates/grid-processor/src/writer/: mod.rs  zarr_writer.rs
crates/grid-processor/testdata/chunked_100x100.zarr/: zarr.json
crates/grid-processor/testdata/gfs_style_360.zarr/: zarr.json
crates/grid-processor/testdata/multiscale_3level.zarr/: zarr.json
crates/grid-processor/testdata/simple_10x10.zarr/: zarr.json
crates/grid-processor/tests/: testdata_integration.rs  zarr_roundtrip.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: config.rs  error.rs  grib2.rs  ingester.rs  lib.rs  metadata.rs  netcdf.rs  tables.rs  upload.rs
crates/netcdf-parser/: Cargo.toml  test.sh
crates/netcdf-parser/src/: error.rs  lib.rs  native.rs  projection.rs
crates/projection/: Cargo.toml
crates/projection/src/: geographic.rs  geostationary.rs  lambert.rs  lib.rs  lut.rs  mercator.rs  polar.rs  transform.rs
crates/renderer/: Cargo.toml
crates/renderer/benches/: barbs_benchmarks.rs  contour_benchmarks.rs  goes_benchmarks.rs  render_benchmarks.rs
crates/renderer/examples/: debug_barbs.rs  save_barb_test.rs  test_actual_barb.rs  test_barbs.rs  test_grib_rendering.rs  test_svg_direct.rs  test_wms_scenario.rs
crates/renderer/src/: barbs.rs  buffer_pool.rs  contour.rs  gradient.rs  lib.rs  numbers.rs  png.rs  style.rs
crates/renderer/tests/: barbs_tests.rs  contour_tests.rs  gradient_tests.rs  numbers_tests.rs  png_tests.rs  style_tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: cache.rs  catalog.rs  grib_cache.rs  grid_cache.rs  lib.rs  object_store.rs  queue.rs  tile_memory_cache.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: fixtures.rs  generators.rs  lib.rs  paths.rs
services/downloader/: Cargo.toml  Dockerfile
services/downloader/src/: config.rs  download.rs  main.rs  scheduler.rs  server.rs  state.rs
services/edr-api/: Cargo.toml  Dockerfile
services/edr-api/benches/: edr_api_benchmarks.rs
services/edr-api/src/: config.rs  content_negotiation.rs  lib.rs  limits.rs  location_cache.rs  main.rs  openapi.yaml  state.rs
services/edr-api/src/handlers/: api.rs  area.rs  catalog_check.rs  collections.rs  conformance.rs  corridor.rs  cube.rs  health.rs  (+7 more)
services/ingester/: Cargo.toml  Dockerfile
services/ingester/src/: config.rs  config_loader.rs  ingest.rs  main.rs  server.rs  sources.rs
services/ingester/tests/: server_tests.rs
services/renderer-worker/: Cargo.toml  Dockerfile
services/renderer-worker/src/: main.rs
services/wms-api/: Cargo.toml  Dockerfile
services/wms-api/src/: admin.rs  capabilities_cache.rs  chunk_warming.rs  cleanup.rs  grid_warming.rs  handlers.rs  layer_config.rs  lib.rs  main.rs  memory_pressure.rs  metrics.rs  model_config.rs  rendering.rs  rendering_tests.rs  startup_validation.rs  state.rs  validation.rs  warming.rs
validation/load-test/: Cargo.toml  README.md  visualize.html
validation/load-test/results/: quick.csv  runs.jsonl
validation/load-test/scenarios/: cold_cache.yaml  comprehensive.yaml  extreme_stress.yaml  gfs.yaml  goes-edr.yaml  goes.yaml  goes_random_temporal.yaml  goes_single_tile_temporal.yaml  goes_temporal_5min.yaml  gradient_only.yaml  hammer_all_endpoints.yaml  hrrr-edr.yaml  hrrr.yaml  hrrr_comprehensive_temporal.yaml  hrrr_forecast_animation.yaml  hrrr_multi_cycle.yaml  hrrr_single_tile_temporal.yaml  isolines_only.yaml  layer_comparison.yaml  mixed.yaml  mixed_styles.yaml  mrms.yaml  mrms_single_tile_temporal.yaml  mrms_temporal_random.yaml  mrms_temporal_stress.yaml  quick.yaml  stress.yaml  temperature_isolines.yaml  temperature_isolines_fine.yaml  temporal_animation.yaml  verify_all_layers.yaml  verify_all_styles.yaml  warm_cache.yaml  wind_barbs_only.yaml  zoom_sweep.yaml
validation/load-test/src/: config.rs  generator.rs  lib.rs  main.rs  metrics.rs  report.rs  runner.rs  wms_client.rs
(+348 files in other folders)
