[package]
name = "grib2-parser"
version.workspace = true
edition.workspace = true

[dependencies]
wms-common = { path = "../wms-common" }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
nom = "7"
grib = { workspace = true }

[dev-dependencies]
renderer = { path = "../renderer" }
