[package]
name = "grid-processor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Grid processing abstraction layer with Zarr V3 support for efficient chunked data access"

[dependencies]
# Zarr support
zarrs.workspace = true
zarrs_storage.workspace = true
zarrs_filesystem.workspace = true
zarrs_object_store.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Storage
object_store.workspace = true
bytes.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Caching
lru = "0.12"

# Logging
tracing.workspace = true

# Time
chrono.workspace = true

# Utilities
bytemuck = { version = "1", features = ["derive"] }

# Internal dependencies
wms-common = { path = "../wms-common" }
storage = { path = "../storage" }
projection = { path = "../projection" }

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
zarrs_filesystem.workspace = true
