[package]
name = "netcdf-parser"
version.workspace = true
edition.workspace = true

[dependencies]
wms-common = { path = "../wms-common" }
bytes = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# NetCDF library for direct file reading (includes HDF5 via its own dependencies)
# System requirements: libhdf5-dev libnetcdf-dev
# Using 0.11 which has hdf5-metno-sys v0.10 that supports HDF5 1.14
netcdf = "0.11"

# HDF5 low-level bindings for silencing error output
# The HDF5 C library prints errors to stderr even when they're handled gracefully;
# we use H5Eset_auto2 to disable this verbose output
hdf5-metno-sys = "0.10"
