[package]
name = "renderer"
version.workspace = true
edition.workspace = true

[dependencies]
wms-common = { path = "../wms-common" }
projection = { path = "../projection" }

flate2 = { workspace = true }
crc32fast = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
grib2-parser = { path = "../grib2-parser" }
bytes = { workspace = true }
