[package]
name = "renderer"
version.workspace = true
edition.workspace = true

[dependencies]
wms-common = { path = "../wms-common" }
projection = { path = "../projection" }

flate2 = { workspace = true }
crc32fast = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
resvg = { workspace = true }
usvg = { workspace = true }
tiny-skia = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }
rusttype = { workspace = true }
imageproc = { workspace = true }

[dev-dependencies]
grib2-parser = { path = "../grib2-parser" }
bytes = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "render_benchmarks"
harness = false

[[bench]]
name = "barbs_benchmarks"
harness = false

[[bench]]
name = "contour_benchmarks"
harness = false

[[bench]]
name = "goes_benchmarks"
harness = false
