[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"
description = "Shared test utilities for weather-wms workspace"
publish = false

[dependencies]
# Only include dependencies needed for test utilities
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time"] }

[dev-dependencies]
tokio-test = { workspace = true }
