[package]
name = "edr-api"
version.workspace = true
edition.workspace = true
description = "OGC API - Environmental Data Retrieval service"

[lib]
name = "edr_api"
path = "src/lib.rs"

[[bin]]
name = "edr-api"
path = "src/main.rs"

[dependencies]
edr-protocol = { path = "../../crates/edr-protocol" }
wms-common = { path = "../../crates/wms-common" }
storage = { path = "../../crates/storage" }
grid-processor = { path = "../../crates/grid-processor" }
projection = { path = "../../crates/projection" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "edr_api_benchmarks"
harness = false
