[package]
name = "ingester"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ingester"
path = "src/main.rs"

[dependencies]
wms-common = { path = "../../crates/wms-common" }
storage = { path = "../../crates/storage" }
grib2-parser = { path = "../../crates/grib2-parser" }
grid-processor = { path = "../../crates/grid-processor" }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
bytes = { workspace = true }
chrono = { workspace = true }
shellexpand = "3.1"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Zarr writing support
zarrs_filesystem = "0.2"
tempfile = "3"
walkdir = "2"
