[package]
name = "ingester"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ingester"
path = "src/main.rs"

[dependencies]
# Internal crates
storage = { path = "../../crates/storage" }
ingestion = { path = "../../crates/ingestion" }

# Async runtime
tokio = { workspace = true }

# HTTP server
axum = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }

# UUID for tracking
uuid = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
serde_json = { workspace = true }
