[package]
name = "renderer-worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "renderer-worker"
path = "src/main.rs"

[dependencies]
wms-common = { path = "../../crates/wms-common" }
storage = { path = "../../crates/storage" }
renderer = { path = "../../crates/renderer" }
projection = { path = "../../crates/projection" }
grib2-parser = { path = "../../crates/grib2-parser" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { workspace = true }
anyhow = { workspace = true }
flate2 = { workspace = true }
crc32fast = { workspace = true }
