[package]
name = "wms-api"
version.workspace = true
edition.workspace = true

[lib]
name = "wms_api"
path = "src/lib.rs"

[[bin]]
name = "wms-api"
path = "src/main.rs"

[dependencies]
wms-common = { path = "../../crates/wms-common" }
wms-protocol = { path = "../../crates/wms-protocol" }
storage = { path = "../../crates/storage" }
grib2-parser = { path = "../../crates/grib2-parser" }
netcdf-parser = { path = "../../crates/netcdf-parser" }
renderer = { path = "../../crates/renderer" }
projection = { path = "../../crates/projection" }
grid-processor = { path = "../../crates/grid-processor" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml.workspace = true
quick-xml = { workspace = true }
num_cpus = "1.16"
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

clap = { workspace = true }
anyhow = { workspace = true }
flate2 = { workspace = true }
crc32fast = { workspace = true }
dotenvy = { workspace = true }
zarrs_filesystem.workspace = true
walkdir.workspace = true
tempfile.workspace = true
image = { workspace = true }
imageproc = { workspace = true }
rusttype = { workspace = true }
