[package]
name = "load-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "load-test"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
hdrhistogram = "7"           # High-precision latency histograms
comfy-table = "7"            # CLI table output
indicatif = "0.17"           # Progress bars
chrono = "0.4"
rand = "0.8"
anyhow = "1"                 # Error handling
